# opentext-pa-mcp

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  pyproject.toml
.claude/commands/: ship.md
.github/workflows/: publish.yml
deploy/azure/: Dockerfile  README.md  azuredeploy.json  azuredeploy.parameters.json
deploy/copilot-studio/: connector.yaml
docs/: CHANGELOG.md  DECISIONS.md  azure-copilot-deployment-guide.md
docs/research/: discovery-plan.md  findings.md
docs/research/artifacts/: Login-Appworks.ps1  admin-page.html  cordys-login-form.html  cordys-saml-request.xml  cordys-saml-response-example.xml  cordys-token-response.xml  login-form.html  openapi.json  otSolutionManager.js  sample_ExampleLegalCaseManagement_entities_LegalCase_lists_DefaultList.json  sample_ExampleLegalCaseManagement_entities_LegalCase_lists_DefaultList__top_1.json  sample_ExampleLegalCaseManagement_entities_LegalCategory_lists_DefaultList__top_2.json  sample_ExampleLegalCaseManagement_entities_LegalRequestType_lists_DefaultList__top_2.json  solutions.js  swagger-ui-page.html
research/: CHANGELOG.md  DECISIONS.md
src/opentext_pa_mcp/: __init__.py  __main__.py  auth.py  catalog.py  config.py  discovery.py  errors.py  request_config.py  server.py  session_cache.py  spec_extractor.py
src/opentext_pa_mcp/tools/: __init__.py  handlers.py
tests/: conftest.py
tests/integration/: conftest.py  test_live.py
tests/unit/: test_auth.py  test_auth_cordys.py  test_catalog.py  test_config.py  test_discovery.py  test_error_translation.py  test_errors.py  test_id_resolver.py  test_request_config.py  test_server_http_mode.py  test_session_cache.py  test_spec_extractor.py  test_tools.py
